@@ -130,6 +130,9 @@
 	47) PR #1890 for #1889. Fix test to avoid temporary files being
 	left after pytest run.
 
+	48) PR #1850 towards #1799. Initial PSyIR node.datatype implementation
+	to query the resulting datatype of a PSyIR subtree.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
